Renamed carousel class, fixed menu issue with collapse

--- a/roobie.css
+++ b/roobie.css
@@ -3476,22 +3476,22 @@ p {
     box-sizing: border-box;
 }
 
-.car {
+.carousel {
     position: relative;
 }
 
 
 /* Hide the images by default */
 
-.car-slide {
+.carousel-slide {
     display: none;
 }
 
 
 /* Next & previous buttons */
 
-.car-prev,
-.car-next {
+.carousel-prev,
+.carousel-next {
     cursor: pointer;
     position: absolute;
     top: 50%;
@@ -3510,7 +3510,7 @@ p {
 
 /* Position the "next button" to the right */
 
-.car-next {
+.carousel-next {
     right: 0;
     border-radius: 3px 0 0 3px;
 }
@@ -3518,8 +3518,8 @@ p {
 
 /* On hover, add a black background */
 
-.car-prev:hover,
-.car-next:hover {
+.carousel-prev:hover,
+.carousel-next:hover {
     background-color: var(--bg3);
     opacity: 90%;
 }
@@ -3527,7 +3527,7 @@ p {
 
 /* Caption text */
 
-.car-txt {
+.carousel-txt {
     color: var(--t2);
     font-size: var(--fnts4);
     position: absolute;
@@ -3539,7 +3539,7 @@ p {
 
 /* Dots to indicate slide active */
 
-.car-dot {
+.carousel-dot {
     cursor: pointer;
     height: 20px;
     width: 20px;
@@ -3551,7 +3551,7 @@ p {
 }
 
 .active,
-.car-dot:hover {
+.carousel-dot:hover {
     background-color: var(--bg6);
 }/* Containers with auto width */
 
